--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -310,3 +310,48 @@ footer nav ul {
   background-color: #1d6154;
   color: white;
 }
+
+#login {
+  width: 30%;
+  margin: auto;
+}
+
+#login h2 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+#login form {
+  display: flex;
+  flex-direction: column;
+}
+
+#login input {
+  height: 40px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  margin-bottom: 30px;
+  padding: 10px;
+}
+
+#login input[type="submit"] {
+  margin-top: 10px;
+}
+
+#login label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#login a {
+  text-align: center;
+  display: block;
+}
+
+/* make footer sticky */
+/* footer {
+  position: fixed;
+  bottom: 0;
+  width: 90%;
+} */
