--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -303,6 +303,8 @@ footer nav ul {
   font-family: "Syne";
   font-weight: 700;
   font-size: 1.2em;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 #filter button:hover,
