--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -357,3 +357,27 @@ footer nav ul {
   bottom: 0;
   width: 90%;
 } */
+
+#edit-mode {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  background-color: rgba(0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+#edit-mode span {
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  font-size: 1.2em;
+}
+
+#edit-mode i {
+  margin-right: 10px;
+}
