--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -392,7 +392,8 @@ footer nav ul {
 
 #modify-portfolio span {
   position: absolute;
-  right: 30%;
+  /* right: 30%; */
+  left: 60vw;
   cursor: pointer;
 }
 
@@ -404,3 +405,238 @@ nav a {
   text-decoration: none;
   color: black;
 }
+
+.modal-overlay {
+  position: fixed; /* Stays fixed in the viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* High z-index to appear above everything */
+}
+
+.modal {
+  background-color: white;
+  border-radius: 8px;
+  padding: 20px;
+  width: 90%;
+  max-width: 600px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-height: 90vh;
+  overflow-y: auto;
+  z-index: 10000; /* Ensure modal is on top of the overlay */
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-buttons:has(.back-button) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-buttons:not(:has(.back-button)) {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.modal-title {
+  font-size: 24px;
+  color: black;
+  font-weight: 500;
+  font-family: "Work Sans", sans-serif;
+}
+
+.modal-buttons button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.photo-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  margin-bottom: 20px;
+  width: 80%;
+  margin: auto;
+}
+
+.photo-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.photo-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.add-photo-button {
+  background-color: #2c7a7b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  /* font-size: 16px; */
+  width: 40%;
+  margin: auto;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  font-family: "Syne";
+}
+
+/* .photo-item i {
+  position: relative;
+  left: 80px;
+  color: white;
+  background-color: black;
+  padding: 5px;
+} */
+
+.delete-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background-color: black;
+  color: white;
+  border: none;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 15%;
+  -webkit-border-radius: 15%;
+  -moz-border-radius: 15%;
+  -ms-border-radius: 15%;
+  -o-border-radius: 15%;
+  padding-block: 0px;
+  padding-inline: 0px;
+}
+
+.modal hr {
+  margin: 50px auto 30px auto;
+  width: 80%;
+  border: 1px solid #ccc;
+}
+
+.validate-photo-button {
+  background-color: #868686;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  /* font-size: 16px; */
+  width: 40%;
+  margin: auto;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  font-family: "Syne";
+}
+
+.modal .form {
+  align-self: center;
+  width: 80%;
+}
+
+.photo-upload {
+  background-color: #e8f1f6;
+  border-radius: 3px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.photo-upload i {
+  color: #b9c5cc;
+  font-size: 58px;
+  margin-bottom: 15px;
+}
+.upload-button {
+  background-color: #cbd6dc;
+  color: #306685;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 33px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-bottom: 7px;
+}
+.file-info {
+  font-size: 10px;
+  color: #444444;
+}
+.form-group {
+  margin-bottom: 20px;
+}
+label {
+  display: block;
+  margin-bottom: 10px;
+  color: #3d3d3d;
+}
+input[type="text"],
+select {
+  width: 95%;
+  padding: 10px;
+  border: none;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  border-width: 5px;
+  -webkit-box-sizing: content-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: content-box; /* Firefox, other Gecko */
+  box-sizing: content-box; /* Opera/IE 8+ */
+}
+select {
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%236C6C6C' d='M10.293 3.293L6 7.586 1.707 3.293A1 1 0 00.293 4.707l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+}
+.submit-button {
+  background-color: #a7a7a7;
+  color: white;
+  border: none;
+  border-radius: 60px;
+  padding: 10px 100px;
+  font-size: 14px;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  font-family: "Syne", sans-serif;
+}
+
+.photo-upload img {
+  width: auto;
+  height: 150px;
+  border-radius: 3px;
+  /* crop in if not wide enough */
+  object-fit: cover;
+}
+
+/* .photo-upload:has(img) {
+  padding: 0;
+} */
